# hot-perpato

./: .gitignore  Anchor.toml  package-lock.json  package.json  tsconfig.json
app/: next.config.ts  package-lock.json  package.json
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/app/achievements/: page.tsx
app/src/app/game/[authority]/[gameCode]/: page.tsx
app/src/app/game/[id]/: page.tsx
app/src/app/leaderboard/: page.tsx
app/src/components/: SideBetBar.tsx  WalletButton.tsx  WalletProvider.tsx
app/src/hooks/: useFlashPrice.ts  useFlashSession.ts  useGame.ts  useWallet.ts
app/src/lib/: anchor.ts  flash.ts  hot_perp.ts  idl.json  magicblock.ts
app/src/lib/idl/: hot_perp.json  hot_perp.ts
program/: Anchor.toml  Cargo.toml
program/src/: lib.rs
programs/hot-perp/: Cargo.toml
programs/hot-perp/src/: lib.rs
scripts/: test-e2e-full.ts  test-e2e.ts
tests/: delegation-test.ts  hot-perp.ts  integration-test.ts  two-accounts-test.ts
