[package]
name = "hot-perp"
version = "0.1.0"
description = "Hot Perp: Trade or Burn — pass the leveraged perp before it explodes"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "hot_perp"

[profile.release]
overflow-checks = true

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "1.0.2", features = ["init-if-needed"] }
ephemeral-rollups-sdk = { version = "0.14.3", features = ["anchor"] }
anchor-spl = { version = "1.0.2", features = ["token"] }
